--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+.form-control {
+    border: 1px solid #eb0d6e limportant;
+    }
+    .form-select {
+    border: 1px solid #0b0d6e limportant;
+    }
+    .red {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: red;
+    }
+    .gray {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color:gray;
+    }
+    .card-body {
+    border: 1px solid #3cbaba limportant;
+    border-top-color: none limportant;
+    padding: 5px limportant;
+    }
+    .breadcrumb {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: oren!important;
+    list-style: none;
+    background-color: #e9ecef;
+    border-radius: .25rem;
+    }
